# melitte

./: .gitignore  README.md  create-local-switch.sh  dune  dune-project  install-deps.sh  melitte.opam
src/: Core.ml  Core.mli  DeBruijn.ml  DeBruijn.mli  Elaborator.ml  Elaborator.mli  Error.ml  ExtPrint.ml  Lex.ml  Lex.mll  Lex2.ml  Monad.ml  Monad.mli  Name.ml  Name.mli  Options.ml  Parse.mly  Position.ml  Position.mli  Raw.ml  Raw.mli  Semantics.ml  Semantics.mli  Sigs.ml  Symbol.ml  Symbol.mli  Syntax.ml  Syntax.mli  UnicodeSigil.ml  UnicodeSigil.mli  UnicodeSymbol.ml  UnicodeSymbol.mli  UniverseLevel.ml  UniverseLevel.mli  Var.ml  Var.mli  dune  melitte.ml
tests/: dune
tests/simple.t/: run.t  simple.melitte  t1.melitte  t2.melitte  t3.melitte  t4.melitte  t5.melitte
